Messing with more vaml stuff

--- a/config/sync/system.site.yml
+++ b/config/sync/system.site.yml
@@ -1,7 +1,7 @@
 uuid: a7891f17-85a4-4c81-b8eb-df2487c04493
 name: 'My Turds'
 mail: develand@gmail.com
-slogan: 'I added this in code'
+slogan: 'I added this in code AGAIN!'
 page:
   403: ''
   404: ''
